--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
     "@trpc/client": "^11.6.0",
     "@trpc/react-query": "^11.6.0",
     "@trpc/server": "^11.6.0",
+    "@types/adm-zip": "^0.5.7",
     "@types/multer": "^2.0.0",
+    "adm-zip": "^0.5.16",
     "axios": "^1.12.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -68,12 +70,14 @@
     "nanoid": "^5.1.5",
     "next-themes": "^0.4.6",
     "pdf-parse": "^2.4.5",
+    "pdf-poppler": "^0.2.3",
     "react": "^19.2.1",
     "react-day-picker": "^9.11.1",
     "react-dom": "^19.2.1",
     "react-hook-form": "^7.64.0",
     "react-resizable-panels": "^3.0.6",
     "recharts": "^2.15.2",
+    "sharp": "^0.34.5",
     "sonner": "^2.0.7",
     "streamdown": "^1.4.0",
     "superjson": "^1.13.3",
@@ -115,6 +119,9 @@
     },
     "overrides": {
       "tailwindcss>nanoid": "3.3.7"
-    }
+    },
+    "onlyBuiltDependencies": [
+      "sharp"
+    ]
   }
 }
