--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "next-themes": "^0.4.6",
     "pdf-parse": "^2.4.5",
     "pdf-poppler": "^0.2.3",
+    "pdfjs-dist": "^5.4.449",
     "react": "^19.2.1",
     "react-day-picker": "^9.11.1",
     "react-dom": "^19.2.1",
