--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.2",
     "drizzle-orm": "^0.44.5",
+    "elevenlabs": "^1.59.0",
     "embla-carousel-react": "^8.6.0",
     "epub2": "^3.0.2",
     "express": "^4.21.2",
