Checkpoint: Enhanced book metadata extraction and insight generation debugging:
**Book Metadata Extraction:**
- Added LLM-powered title/author extraction from PDF first page
- Implemented PDF cover extraction using canvas (first page rendering)
- Added canvas package for PDF-to-image conversion
- Fallback extraction when PDF metadata is missing

**Insight Generation Debugging:**
- Added detailed JSON parsing error logs in Stage 1
- Shows first/last 500 chars of malformed JSON
- Identifies exact parse error location
- Better error context for truncation issues

**Error Handling:**
- Enhanced error logging throughout extraction pipeline
- Better error messages for debugging
- Improved error boundaries in InsightProgress component

Ready for testing with detailed diagnostics.

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@types/multer": "^2.0.0",
     "adm-zip": "^0.5.16",
     "axios": "^1.12.0",
+    "canvas": "^3.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -123,6 +124,7 @@
       "tailwindcss>nanoid": "3.3.7"
     },
     "onlyBuiltDependencies": [
+      "canvas",
       "sharp"
     ]
   }
