Checkpoint: Integrated new infrastructure files from GitHub: - WebSocket for real-time progress updates (connected to premiumInsightPipeline) - Redis caching with memory fallback (optional, no config needed) - Rate limiting for API protection (standardLimiter on /api routes) - Installed dependencies: ioredis, ws, express-rate-limit, @types/ws - Fixed TypeScript errors in redis.ts - All features fully wired and ready to use

--- a/package.json
+++ b/package.json
@@ -63,8 +63,10 @@
     "embla-carousel-react": "^8.6.0",
     "epub2": "^3.0.2",
     "express": "^4.21.2",
+    "express-rate-limit": "^8.2.1",
     "framer-motion": "^12.23.22",
     "input-otp": "^1.4.2",
+    "ioredis": "^5.8.2",
     "jose": "6.1.0",
     "lucide-react": "^0.453.0",
     "multer": "^2.0.2",
@@ -88,6 +90,7 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
     "wouter": "^3.3.5",
+    "ws": "^8.18.3",
     "zod": "^4.1.12"
   },
   "devDependencies": {
@@ -99,6 +102,7 @@
     "@types/node": "^24.7.0",
     "@types/react": "^19.2.1",
     "@types/react-dom": "^19.2.1",
+    "@types/ws": "^8.18.1",
     "@vitejs/plugin-react": "^5.0.4",
     "add": "^2.0.6",
     "autoprefixer": "^10.4.20",
